--- a/chibuzo.html
+++ b/chibuzo.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/chibuzo.css">
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/fontawesome.css">
+    <link rel="stylesheet" href="googlefonts//NotoSans-Black.ttf">
     <title>Chibuzo Franklin Odigbo</title>
 </head>
 <body>
     
-    <header>
+    <header  class="header">
         <div class="img">
             <img src="image/franklin" alt="Franklin" class="frank">
         </div>
