--- a/index.html
+++ b/index.html
@@ -157,19 +157,19 @@
 
         <hr>
 
-        <h2 id="message">Send a message...</h2>
+        <!-- <h2 id="message">Send a message...</h2>
         <form class="contact-form" action="#">
             <input class="name" type="text" placeholder="Name...">
             <input class="email" type="email" placeholder="Email...">
             <textarea class="msg" cols="50" rows="10" placeholder="Your Message..."></textarea>
             <button type="submit">Send</button>
-        </form>
+        </form> -->
 
         <button type="button" id="btn">
             <a href="#head"><img src="images/uparrow.png" alt="" id="arrow"></a>
         </button>
 
-
+        <p id="copy">Copyright 2022 ╽╽ Chibuzo Franklin Odigbo</p>
 
     </footer>
 
