--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <h3 id="one">
                     A porforlio I had worked on
                 </h3> <br>
-                <a href="../portforlio/sleep.html" target="_blank" id="port">click to view</a>
+                <a href="../portforlio/index.html" target="_blank" id="port">click to view</a>
             </div>
 
             <div class="net">
@@ -127,7 +127,7 @@
                 <h3 id="two">
                     Just a netflix clone
                 </h3> <br>
-                <a href="../netflix clone/netflix.html" target="blank" id="net">click to view</a>
+                <a href="../netflixclone/index.html" target="blank" id="net">click to view</a>
             </div>
 
             <div class="game">
@@ -135,7 +135,7 @@
                 <h3 id="three">
                     A basic game development landing page
                 </h3> <br> 
-                <a href="../JUST PRACTICE/index.html" target="_blank" id="game">click to view</a>
+                <a href="../gdev/index.html" target="_blank" id="game">click to view</a>
             </div>
 
         </fieldset>
